[package]
name = "kinderdisco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.10.0"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.21"
huelib = "0.13.2"
rand = "0.8.5"