[package]
name = "kinderdisco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.10.0"
confy = "0.5.1"
egui = "0.23.0"
eframe = "0.23.0"
futures = "0.3.21"
huelib = "0.13.2"
num-traits = "0.2.17"
random = "0.14.0"
serde = "1.0"
